# audiopyle

./: .gitignore  .pre-commit-config.yaml  README.md
audiopyle/: README.md  dev.md  pyproject.toml
audiopyle/audiopyle/: audio.py  bandcamp.py  builtins.py  core.py  exceptions.py  management.py  test.json  testing.py
audiopyle/notebooks/: playground.ipynb
audiopyle/tests/: conftest.py
audiopyle/tests/unit/: test_builtins.py  test_core.py  test_management.py
